--- a/Visual Studio Solution/AcleUrbanGardens.Web/Web.config
+++ b/Visual Studio Solution/AcleUrbanGardens.Web/Web.config
@@ -9,10 +9,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="UrbanGardenConnection" connectionString="Data Source=(LocalDb)\11.0;AttachDbFilename=|DataDirectory|\AcleUrbanGardens.mdf;Initial Catalog=AcleUrbanGardens;Integrated Security=True"
+    <add name="UrbanGardenConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\AcleUrbanGardens.mdf;Initial Catalog=AcleUrbanGardens.Web;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
-  <appSettings>
+  <appSettings file="..\..\..\Secrets.config">
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
