Added Functionality to show historical information
Added ability to change grid view to show Created By, Created Date,
Updated By and Updated Date values in grid.
Started adding update image functionality on Edit Categories page.
Refactored Categories Delete to new formating standard

--- a/Visual Studio Solution/AcleUrbanGardens.Web/AcleUrbanGardens.Web.csproj
+++ b/Visual Studio Solution/AcleUrbanGardens.Web/AcleUrbanGardens.Web.csproj
@@ -311,6 +311,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\CategoryController.cs" />
+    <Compile Include="Controllers\ImageController.cs" />
     <Compile Include="Helpers\AcleUrbanGardenHelpers.cs" />
     <Compile Include="Models\CategoryViewModels.cs" />
     <Compile Include="Migrations\AcleUrbanGardensDbContext\Configuration.cs" />
@@ -327,6 +328,7 @@
     <Compile Include="Infrastructure\AcleUrbanGardensDb.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\ImageViewModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\ProductViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -531,6 +533,7 @@
     </Content>
     <Content Include="Views\Shared\_GridPager.cshtml" />
     <Content Include="Views\Shared\_Grid.cshtml" />
+    <Content Include="Views\Image\UpdateImage.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -580,6 +583,7 @@
           <SaveServerSettingsInUserFile>False</SaveServerSettingsInUserFile>
         </WebProjectProperties>
       </FlavorProperties>
+      <UserProperties Content_4bootstrap_1css_1map__JSONSchema="http://json.schemastore.org/tsconfig" />
     </VisualStudio>
   </ProjectExtensions>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
