Added image Upload functionality to Categories Create and Edit pages
Added image Upload functionality to Categories Create and Edit pages

Removed old files for image upload

--- a/Visual Studio Solution/AcleUrbanGardens.Web/AcleUrbanGardens.Web.csproj
+++ b/Visual Studio Solution/AcleUrbanGardens.Web/AcleUrbanGardens.Web.csproj
@@ -311,7 +311,6 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\CategoryController.cs" />
-    <Compile Include="Controllers\ImageController.cs" />
     <Compile Include="Helpers\AcleUrbanGardenHelpers.cs" />
     <Compile Include="Models\CategoryViewModels.cs" />
     <Compile Include="Migrations\AcleUrbanGardensDbContext\Configuration.cs" />
@@ -328,7 +327,6 @@
     <Compile Include="Infrastructure\AcleUrbanGardensDb.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
-    <Compile Include="Models\ImageViewModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\ProductViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -533,11 +531,11 @@
     </Content>
     <Content Include="Views\Shared\_GridPager.cshtml" />
     <Content Include="Views\Shared\_Grid.cshtml" />
-    <Content Include="Views\Image\UpdateImage.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Content\Images\Social\Microsoft\" />
+    <Folder Include="Content\Images\temp\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config">
