--- a/Visual Studio Solution/AcleUrbanGardens.Web/AcleUrbanGardens.Web.csproj
+++ b/Visual Studio Solution/AcleUrbanGardens.Web/AcleUrbanGardens.Web.csproj
@@ -534,6 +534,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Content\Images\deleted\" />
     <Folder Include="Content\Images\Social\Microsoft\" />
     <Folder Include="Content\Images\temp\" />
   </ItemGroup>
