--- a/Visual Studio Solution/AcleUrbanGardens.Web/AcleUrbanGardens.Web.csproj
+++ b/Visual Studio Solution/AcleUrbanGardens.Web/AcleUrbanGardens.Web.csproj
@@ -312,9 +312,10 @@
     <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\CategoryController.cs" />
     <Compile Include="Helpers\AcleUrbanGardenHelpers.cs" />
-    <Compile Include="Models\CategoryViewModels.cs" />
+    <None Include="Migrations\AcleUrbanGardensDbContext\Configuration.cs.old" />
     <Compile Include="Migrations\AcleUrbanGardensDbContext\Configuration.cs" />
     <Compile Include="Migrations\ApplicationDbContext\Configuration.cs" />
+    <Compile Include="Models\CategoryViewModels.cs" />
     <Compile Include="Models\Constants.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
